Wed Dec 22 12:47:02 2004  Chad Elliott  <elliott_c@ociweb.com>

        * MPC version 3.2.0 released.

Local Variables:
add-log-time-format: current-time-string
End: